--- a/alocacao_otimizada_teste.ui
+++ b/alocacao_otimizada_teste.ui
@@ -551,6 +551,25 @@
                 </layout>
                </item>
                <item>
+                <layout class="QHBoxLayout" name="horizontalLayout_22">
+                 <item>
+                  <widget class="QLabel" name="label_7">
+                   <property name="font">
+                    <font>
+                     <pointsize>16</pointsize>
+                    </font>
+                   </property>
+                   <property name="text">
+                    <string>Path distancia arvores:</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QLineEdit" name="distArvoresPath"/>
+                 </item>
+                </layout>
+               </item>
+               <item>
                 <widget class="QFrame" name="divisor0">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
